--- a/wildcatweb/src/RunMenu.module.css
+++ b/wildcatweb/src/RunMenu.module.css
@@ -47,8 +47,18 @@
     cursor: pointer;
     transition: all var(--transition-normal);
     width: 100%;
+    transition: transform var(--transition-normal),
+    filter var(--transition-normal);
+    transform: scale(1);
 }
 
+.stepButton:hover{
+    transform: scale(1.1);
+}
+
+.stepButton:active{
+    transform: scale(.95);
+}
 .stepButton.active,
 .stepButton.current {
     border-color: var(--color-border-active);
@@ -84,10 +94,14 @@
     transition: all var(--transition-normal);
     text-transform: uppercase;
     align-self: center;
+    transition: transform var(--transition-normal),
+    filter var(--transition-normal);
+    transform: scale(1);
 }
 
 .playButton:hover:not(:disabled) {
     opacity: 0.9;
+    transform: scale(1.1);
 }
 
 .playButton:disabled {
@@ -95,6 +109,11 @@
     cursor: not-allowed;
     opacity: 0.6;
 }
+
+.playButton:active {
+    transform: scale(.95);
+}
+
 
 .errorIcon,
 .warningIcon {
