--- a/wildcatweb/src/retro-ui-tokens.css
+++ b/wildcatweb/src/retro-ui-tokens.css
@@ -85,7 +85,7 @@
     --ease-out: cubic-bezier(0, 0, 0.2, 1);
     --ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
 
-    /* Base grays (shared) */
+    /* Base grays (DO NOT USE THESE IN COMPONENTS, instead use theme colors below) */
     --color-gray-900: #121212;
     --color-gray-800: #333333;
     --color-gray-700: #444444;
