--- a/wildcatweb/src/InstructionDescriptionPanel.module.css
+++ b/wildcatweb/src/InstructionDescriptionPanel.module.css
@@ -168,8 +168,8 @@
 .audioButton {
     background: none;
     border: none;
-    color: var(--color-black);
     cursor: pointer;
+    color: var(--color-black);
     padding: var(--spacing-1);
     margin-left: var(--spacing-2);
     border-radius: 50%;
@@ -197,7 +197,8 @@ body[data-theme="retro"] .panel {
 }
 
 body[data-theme="retro"] .descriptionText,
-body[data-theme="retro"] .pairText {
+body[data-theme="retro"] .pairText,
+body[data-theme="retro"] .audioButton{
     color: var(--color-white);
 }
 
